fixed reviews width and text-align

--- a/src/components/reviews/Reviews.css
+++ b/src/components/reviews/Reviews.css
@@ -11,7 +11,6 @@
 
 
 .reviews-title {
-    text-align: center;
     font-size: 2rem;
     margin-bottom: 20px;
     color: #ffffff;
@@ -48,6 +47,7 @@
     font-size: 1rem;
     color: #ffffff;
     margin-bottom: 10px;
+    text-align: left;
 }
 
 .review-date {
@@ -59,7 +59,7 @@
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    width: 35%;
+    width: 50%;
     margin: 0 auto;
     gap: 15px;
 }
